kubernetes/apps/home-automation/plex/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  labels:
    app: plex

spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex

    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          ports:
            - name: plex
              containerPort: 32400

          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: extracted-movies
              mountPath: /movies
            - name: extracted-series
              mountPath: /series

          resources:
            limits:
              cpu: 800m
              memory: 800Mi
            requests:
              cpu: 400m
              memory: 400Mi

      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - name: extracted-series
          persistentVolumeClaim:
            claimName: extracted-series
        - name: extracted-movies
          persistentVolumeClaim:
            claimName: extracted-movies
